# 10code-intranet

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_QUICKSTART.md  Dockerfile  Makefile  README.md  SECRETS_SETUP.md  compose.ml.yml  compose.override.yml  compose.yml  debug_env.py  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  validate_secrets.py
.rules/: AGENT_SPECIALIZATION.md  ARCHITECTURE_RULES.md  DJANGO_PATTERNS.md  INERTIA_FRONTEND.md  README.md
10code_intranet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: secrets.py
config/settings/: base.py  development.py  production.py
docker/: ML_README.md  README.md  entrypoint.sh
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/styles/: globals.css
scripts/: README.md  SECRETS_SETUP.md  validate_secrets.py
