# ========================================
# BUILD SYSTEM
# ========================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ========================================
# PROJECT METADATA
# ========================================
[project]
name = "10code-intranet"
version = "1.0.0"
description = "Sistema de Gestión de Proyectos Integral con ML para 10Code"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Proprietary"}
authors = [
    {name = "10Code", email = "jmarquez@10code.es"}
]
keywords = [
    "django",
    "project-management",
    "intranet",
    "machine-learning",
    "resource-management",
    "time-tracking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

# ========================================
# DEPENDENCIES - BASE (Producción)
# ========================================
dependencies = [
    # Django Core
    "django>=5.2.8,<5.4.0",
    "django-environ>=0.11.2",
    
    # Inertia Stack
    "inertia-django>=1.2.0",
    "django-vite>=3.0.3",
    
    # Database
    "psycopg[binary]>=3.2.3",
    
    # Authentication
    "django-allauth>=65.0.2",
    
    # REST API (para integraciones internas)
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.4.0",
    "django-filter>=24.3",
    
    # Async Tasks & Cache
    "celery>=5.4.0",
    "redis>=5.0.8",
    "django-celery-beat>=2.7.0",
    "django-redis>=5.4.0",
    
    # File Storage
    "django-storages>=1.14.4",
    "boto3>=1.34.162",
    "pillow>=10.4.0",
    
    # Monitoring & Logging
    "sentry-sdk>=2.14.0",
    
    # Utilities
    "python-decouple>=3.8",
    "django-extensions>=3.2.3",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    
    # Server (producción)
    "gunicorn>=23.0.0",
    "whitenoise>=6.7.0",
]

# ========================================
# OPTIONAL DEPENDENCIES (Grupos)
# ========================================
[project.optional-dependencies]
# Desarrollo
dev = [
    "django-debug-toolbar>=4.4.6",
    "ipython>=8.27.0",
    "ipdb>=0.13.13",
    "werkzeug>=3.0.0",
    
    # Code Quality
    "black>=24.8.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
    "pre-commit>=3.8.0",
    
    # Type Checking
    "mypy>=1.11.0",
    "django-stubs>=5.0.0",
    "djangorestframework-stubs>=3.15.0",
    "types-python-dateutil>=2.9.0",
    "types-redis>=4.6.0",
    
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

# Testing
test = [
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "factory-boy>=3.3.1",
    "faker>=30.0.0",
    "freezegun>=1.5.0",
    "responses>=0.25.0",
]

# Machine Learning (CEPF + Estimaciones)
ml = [
    "scikit-learn>=1.4.0",
    "tensorflow>=2.15.0,<2.16.0",
    "torch>=2.1.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0,<2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.3.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0",
]

# Todas las dependencias de desarrollo
all = [
    "10code-intranet[dev,test,ml]",
]

# ========================================
# SCRIPTS (Entry Points CLI)
# ========================================
[project.scripts]
intranet = "config.cli:main"
intranet-worker = "config.cli:celery_worker"
intranet-beat = "config.cli:celery_beat"

# ========================================
# PROJECT URLS
# ========================================
[project.urls]
Homepage = "https://intranet.10code.es"
Documentation = "https://docs.intranet.10code.es"
Repository = "https://github.com/10code/intranet"
Issues = "https://github.com/10code/intranet/issues"

# ========================================
# HATCH (Build Tool Configuration)
# ========================================
[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/frontend",
    "/.venv",
    "/.ruff_cache",
    "/.pytest_cache",
]

# ========================================
# UV CONFIGURATION
# ========================================
[tool.uv]
# Desarrollo adicional (no en optional-dependencies)
dev-dependencies = [
    "django-silk>=5.1.0",      # Profiling SQL
    "django-migration-linter>=5.1.0",  # Lint migraciones
]

# Python version management
managed = true
python-preference = "only-managed"

# ========================================
# BLACK - Code Formatter
# ========================================
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | node_modules
  | staticfiles
  | media
)/
'''

# ========================================
# RUFF - Linter & Formatter
# ========================================
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "node_modules",
    "staticfiles",
    "media",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "DJ",   # flake8-django
    "N",    # pep8-naming
    "S",    # bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "DTZ",  # flake8-datetimez
    "RUF",  # Ruff-specific rules
]

ignore = [
    "E501",   # line too long (black handles)
    "B008",   # function calls in argument defaults
    "S105",   # possible hardcoded password
    "S106",   # possible hardcoded password
    "DJ001",  # null=True on CharField
    "DTZ005", # timezone naive datetime
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"settings/*.py" = ["F405", "F403"]
"tests/**/*.py" = ["S101", "ARG001", "ARG002"]
"**/migrations/*.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "django",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ========================================
# MYPY - Static Type Checking
# ========================================
[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Django hace esto difícil
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "config.settings.development"

# ========================================
# PYTEST - Testing Framework
# ========================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["apps", "tests"]
norecursedirs = [
    "migrations",
    "staticfiles",
    "media",
    "node_modules",
    ".venv",
]

addopts = [
    "--reuse-db",
    "--nomigrations",
    "--cov=apps",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=json",
    "--cov-fail-under=80",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--maxfail=1",
    "-ra",
    "-v",
    # Parallel execution
    "-n=auto",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "unit: unit tests",
    "ml: machine learning tests",
    "smoke: smoke tests",
    "api: API tests",
    "frontend: frontend integration tests",
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ========================================
# COVERAGE - Code Coverage
# ========================================
[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/admin.py",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
]
branch = true
parallel = true
concurrency = ["multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"

# ========================================
# ISORT - Import Sorting
# ========================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/node_modules/*", "*/staticfiles/*"]
known_first_party = ["apps", "config"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
