# ========================================
# BUILD SYSTEM
# ========================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ========================================
# PROJECT METADATA
# ========================================
[project]
name = "10code-intranet"
version = "0.0.1"
description = "Sistema de herramientas para el control productivo de 10Code"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Proprietary"}
authors = [
    {name = "10Code", email = "jmarquez@10code.es"}
]
keywords = [
    "django",
    "project-management",
    "intranet",
    "machine-learning",
    "resource-management",
    "time-tracking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
]

# ========================================
# DEPENDENCIES - BASE (Producción)
# ========================================
dependencies = [
    # Django Core
    "django>=5.2.8,<5.4.0",
    "django-environ>=0.12.0",
    
    # Inertia Stack
    "inertia-django>=1.2.0",
    "django-vite>=3.1.0",
    
    # Database
    "psycopg[binary]>=3.2.12",
    
    # Authentication
    "django-allauth>=65.13.0",
    
    # REST API (para integraciones internas)
    "djangorestframework>=3.16.1",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    
    # Async Tasks & Cache
    "celery>=5.5.3",
    "redis>=7.0.1",
    "django-celery-beat>=2.8.1",
    "django-redis>=6.0.0",
    
    # File Storage
    "django-storages>=1.14.6",
    # "boto3>=1.34.162",
    "pillow>=12.0.0",
    
    # Monitoring & Logging
    "sentry-sdk>=2.44.0",
    
    # Utilities
    "python-decouple>=3.8",
    "django-extensions>=4.1",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "pydantic>=2.12.4",
    
    # Server (producción)
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
]

# ========================================
# OPTIONAL DEPENDENCIES (Grupos)
# ========================================
[project.optional-dependencies]
# Desarrollo
dev = [
    "django-debug-toolbar>=6.1.0",
    "ipython>=9.7.0",
    "ipdb>=0.13.13",
    "werkzeug>=3.1.3",
    
    # Code Quality
    "black>=25.11.0",
    "ruff>=0.14.4",
    "isort>=7.0.0",
    "pre-commit>=4.4.0",
    
    # Type Checking
    "mypy>=1.18.2",
    "django-stubs>=5.2.7",
    "djangorestframework-stubs>=3.16.5",
    "types-python-dateutil>=2.9.0",
    "types-redis>=4.6.0",
    
    # Documentation
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.25.0",

    "django-silk>=5.4.3",      # Profiling SQL
    "django-migration-linter>=5.2.0",  # Lint migraciones
]

# Testing
test = [
    "pytest>=9.0.0",
    "pytest-django>=4.11.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "factory-boy>=3.3.3",
    "faker>=37.12.0",
    "freezegun>=1.5.5",
    "responses>=0.25.8",
]

# Machine Learning (CEPF + Estimaciones)
ml = [
    # "scikit-learn>=1.7.2",
    # "tensorflow>=2.20.0,<2.21.0",
    # "torch>=2.9.0",
    # "pandas>=2.3.3",
    # "numpy>=2.3.4,<2.4.0",
    # "nltk>=3.9.2",
    # "spacy>=3.8.8",
]

# Todas las dependencias de desarrollo
all = [
    "10code-intranet[dev,test,ml]",
]

# ========================================
# PROJECT URLS
# ========================================
[project.urls]
Homepage = "https://intranet.10code.es"
Documentation = "https://docs.intranet.10code.es"
Repository = "https://github.com/10code/intranet"
Issues = "https://github.com/10code/intranet/issues"

# ========================================
# HATCH (Build Tool Configuration)
# ========================================
[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/frontend",
    "/.venv",
    "/.ruff_cache",
    "/.pytest_cache",
]

# ========================================
# UV CONFIGURATION
# ========================================

# Python version management
managed = true
python-preference = "only-managed"

# ========================================
# BLACK - Code Formatter
# ========================================
[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | node_modules
  | staticfiles
  | media
)/
'''

# ========================================
# RUFF - Linter & Formatter
# ========================================
[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "node_modules",
    "staticfiles",
    "media",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "DJ",   # flake8-django
    "N",    # pep8-naming
    "S",    # bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "DTZ",  # flake8-datetimez
    "RUF",  # Ruff-specific rules
]

ignore = [
    "E501",   # line too long (black handles)
    "B008",   # function calls in argument defaults
    "S105",   # possible hardcoded password
    "S106",   # possible hardcoded password
    "DJ001",  # null=True on CharField
    "DTZ005", # timezone naive datetime
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"settings/*.py" = ["F405", "F403"]
"tests/**/*.py" = ["S101", "ARG001", "ARG002"]
"**/migrations/*.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "django",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ========================================
# MYPY - Static Type Checking
# ========================================
[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Django hace esto difícil
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "config.settings.development"

# ========================================
# PYTEST - Testing Framework
# ========================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["apps", "tests"]
norecursedirs = [
    "migrations",
    "staticfiles",
    "media",
    "node_modules",
    ".venv",
]

addopts = [
    "--reuse-db",
    "--nomigrations",
    "--cov=apps",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=json",
    "--cov-fail-under=80",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--maxfail=1",
    "-ra",
    "-v",
    # Parallel execution
    "-n=auto",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "unit: unit tests",
    "ml: machine learning tests",
    "smoke: smoke tests",
    "api: API tests",
    "frontend: frontend integration tests",
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ========================================
# COVERAGE - Code Coverage
# ========================================
[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/admin.py",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
]
branch = true
parallel = true
concurrency = ["multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"

# ========================================
# ISORT - Import Sorting
# ========================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/node_modules/*", "*/staticfiles/*"]
known_first_party = ["apps", "config"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
